added navigation links

--- a/manifest.json
+++ b/manifest.json
@@ -52,6 +52,33 @@
       "name": "See Wiki",
       "url": "./wiki/",
       "description": "see wiki page"
+    },
+    {
+      "name": "Use API",
+      "url": "./api/",
+      "description": "see wiki page"
+    },
+    {
+      "name": "Use API",
+      "url": "./api/",
+      "description": "use api for"
+    },
+    {
+      "name": "View repo",
+      "url": "https://github.com/DownGD/DownGD.GitHub.io",
+      "description": "view repo to give us a star"
+    },
+    {
+      "name": "Download Extension",
+      "url": "https://downgd.github.io/api/?=https://github.com/DownGD/downgd.github.io/tree/main/extension&name=Extension",
+      "description": "download extension for github.com"
+    },
+    {
+      "name": "or use userscrit",
+      "url": "https://downgd.github.io/script/downgd-download-button-user.js",
+      "description": "use userscript for github.com in scriptrunner extensions"
     }
+
+
   ]
 }
